--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,4 +1,7 @@
 /* purgecss start ignore */
+/* noinspection CssUnknownTarget */
+@import 'highlight.js/styles/atom-one-dark.css';
+
 @tailwind base;
 @tailwind components;
 /* purgecss end ignore */
